# lockin

./: .gitignore  ADVERSARIAL_FINDINGS.md  ARCHITECTURE.md  CHANGELOG.md  CLARIFICATIONS.md  CLAUDE.md  CONTRIBUTING.md  DELIVERY.md  DOCS_INDEX.md  FAQ.md  FIXES_APPLIED.md  GETTING_STARTED.md  IMPLEMENTATION.md  LICENSE  QUICKSTART.md  README.md  TERMINAL_EXAMPLES.md  TEST_REPORT.md  TROUBLESHOOTING.md  UI_FLOW.md  UI_IMPROVEMENTS.md  USER_GUIDE.md  cli.py  com.lockin.engine.plist  database.py  dev-engine.sh  final_verification.py  install.sh  pyproject.toml  uninstall.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  report.md
problems/: lockin_break_recommendation_brief.md  lockin_ui_papercuts_brief.md  rich_key_prompt_brief.md  rich_live_ui_brief.md  rich_progress_bar_brief.md
src/lockin/: __init__.py  __main__.py  cli.py  config.py  database.py  engine.py  engine_main.py
tests/: final_verification.py  test_database.py
